[project]
name = "cna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "acat>=1.7.1",
    "asap3",
    "ase>=3.24.0",
    "freud-analysis>=3.2.0",
    "pyscal3",
    "pytest>=8.3.5",
    "structuretoolkit>=0.0.31",
]

# uv config
[tool.uv]
package = true
[[tool.uv.index]]
url = "https://mirror.nju.edu.cn/pypi/web/simple"
default = true


